// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KvLink (unit tests) when label and subtitle is provided should match the snapshot 1`] = `
<kv-link label="Hello" subtitle="World">
  <mock:shadow-root>
    <div class="link-container" part="container">
      <a class="label">
        Hello
      </a>
      <div class="subtitle">
        World
      </div>
    </div>
  </mock:shadow-root>
</kv-link>
`;

exports[`KvLink (unit tests) when only label is provided should match the snapshot 1`] = `
<kv-link label="Hello">
  <mock:shadow-root>
    <div class="link-container" part="container">
      <a class="label">
        Hello
      </a>
    </div>
  </mock:shadow-root>
</kv-link>
`;
